[package]
name = "vkdl"
version = "0.1.0"
authors = ["djakish <69299717+djakish@users.noreply.github.com>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
reqwest = "0.11"
tokio = { version = "1", features = ["full"] }
scraper = "0.13.0"

