[package]
name = "vkdl"
version = "0.1.1"
authors = ["djakish <69299717+djakish@users.noreply.github.com>"]
edition = "2021"
license = "MIT OR Apache-2.0"
description = "Cli tool to download video from vk"
homepage = "https://github.com/djakish/vkdl"
keywords = ["vk"]
readme = "README.md"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
reqwest = { version ="0.11" , features = ["stream"] }
tokio = { version = "1", features = ["full"] }
scraper = "0.13.0"
indicatif = "0.16.2"
futures-util = "0.3.21"

[profile.release]
opt-level = "z"  
lto = true
panic = "abort"
codegen-units = 1
strip = true
